[develop] Fix for too much padding on publication accessibility text.

--- a/health/sass/_shame.scss
+++ b/health/sass/_shame.scss
@@ -359,7 +359,8 @@
 .node-type-health-topic-hp,
 .node-type-landing-page,
 td, th,
-.view {
+.view,
+.document-accessibility-form {
   p:last-of-type {
     margin-bottom: 0;
   }
